fix: navbar visibility fixed for mobile screens

--- a/src/app/components/navbar/navbar.component.css
+++ b/src/app/components/navbar/navbar.component.css
@@ -54,14 +54,18 @@
             justify-content: baseline;
             gap: 2rem;
             position: absolute;
-            top: 80px;
+            top: 66px;
             left: 0;
-            background-color: white;
+            background-color: var(--bg-dark);
             width: 100%;
             height: 0;
             overflow-y: hidden;
             visibility: hidden;
             transition: .6s;
+            backdrop-filter: blur(200px);
+            -webkit-backdrop-filter: blur(200px);
+            padding-top: 2rem;
+            z-index: 9999;
         }
     
         .nav-links.active{
